--- a/css/shortcuts-dragdrop.css
+++ b/css/shortcuts-dragdrop.css
@@ -6,7 +6,6 @@
 }
 .shortcut-placeholder {
     opacity: 0.5;
-    pointer-events: none;
 }
 .shortcut-placeholder .shortcut-icon {
     background: transparent !important;
